# sqladmin

./: .gitignore  404.html  PKG-INFO  index.html  models.py  objects.inv  pyproject.toml  setup.cfg  setup.py  sitemap.xml
api_reference/application/: index.html
api_reference/model_admin/: index.html
configurations/: index.html
sqladmin/: application.py  columns.py  fields.py  filters.py  forms.py  helpers.py  models.py  schemas.py
sqladmin/backends/: __init__.py  relationships.py
sqladmin/backends/gino/: __init__.py  base.py  models.py  utils.py
sqladmin/statics/css/: main.css
sqladmin/statics/js/: main.js
sqladmin/templates/sqladmin/: base.html  create.html  edit.html  list.html
sqladmin/templates/sqladmin/components/: list_head.html
sqladmin/utils/: db.py  enum.py
tests/: common.py  conftest.py  settings.py  subtest_admin_gino.py  subtest_forms_gino.py  subtest_forms_sync_async.py  test_admin.py  test_application.py  test_fields.py  test_filters.py  test_forms.py  test_models.py
tests/backends/: __init__.py  conftest.py  model.py
tests/backends/gino/: base.py  conftest.py  model.py
tests/backends/sqlalchemy/: conftest.py  model.py
working_with_templates/: index.html
