[tool.poetry]
name = "sqladmin"
version = "0.1.4"
description = "Admin interface for SQLAlchemy and Gino"
authors = ["Amin Alaee <mohammadamin.alaee@gmail.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.7"
starlette = ""
Jinja2 = ""
sqlalchemy = "1.3.15"
wtforms = "^3"
wtforms-appengine = "^0.1"
python-multipart = "^0.0.5"
aiosqlite = "^0.17.0"
pydantic = {extras = ["mypy"], version = "^1.8.2"}
reform = "^0.2"

[tool.poetry.dev-dependencies]
gino = {extras = ["starlette"], version = "^1.0.1"}
httpx = ">=0.16.1"
SQLAlchemy-Utils = "^0.36.8"
autoflake = "^1.4"
black = "^22.1.0"
coverage = "^6.3.1"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.931"
pytest = "^6.0.0"
greenlet = "^1.1.2"

mkdocs = ">=1.0"
mkdocs-material = ">=3.0"
mkdocstrings = "^0.7.0"

twine = ">1.0.1"
wheel = "^0.37.1"
asgi-lifespan = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
